--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "hasha": "^3.0.0",
     "mongoose": "^5.0.3"
   }
 }
