--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Url shortner with the help of MongoDB and Base58 decoder",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "author": "Ashutosh Dwivedi",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "hasha": "^3.0.0",
-    "mongoose": "^5.0.3"
+    "mongoose": "^5.0.3",
+    "sha1": "^1.1.1"
   }
 }
